add ability to disable streaming http request processing (#9006)
Adds a new `micronaut.server.netty.server-type` setting that can be set to `FULL_CONTENT` to disable streaming requests. This will make it easier to implement certain use cases like retrieving the body from a filter and also improves performance.

This PR also optimises route execution further to improvement the overall performance of the framework.

---------

Co-authored-by: yawkat <jonas.konrad@oracle.com>
Co-authored-by: Denis Stepanov <denis.s.stepanov@oracle.com>